--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Build/
 CyberGod_Studio2/Assets/Scripts/bodydivide_test_v20402/dist/launcher
+/CyberGod_Studio2/Assets/Scripts/bodydivide_test_v20402/dist
